k8s/portainer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
  name: portainer
  namespace: portainer
spec:
  rules:
  - host: portainer.fortify.lab
    http:
      paths:
      - backend:
          service:
            name: portainer
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - portainer.fortify.lab
    secretName: portainer-tls
